Creation de la page pour filtrer & modification du template

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -9,8 +9,8 @@
         {% block header %}
         <h1> ----- HEADER ------</h1>
         {% endblock %}
-        {% block filtrer %}
-        <h1> ----- FILTRER -----</h1>
+        {% block boutonFiltrer %}
+        <h1> ----- BOUTON FILTRER -----</h1>
         {% endblock %}
         {% block contenu %}
         {% endblock %}
