--- a/templates/pro_stages/afficherStage.html.twig
+++ b/templates/pro_stages/afficherStage.html.twig
@@ -1,31 +1,33 @@
 {% extends 'base.html.twig' %}
 
-{% block titrePage %}
+{% block titrePage %}	<!-- TITRE -->
 
 <h2> Stage numéro {{ idStage }} </h2>
 
 {% endblock %}
 
-{% block contenuPage %}
+
+{% block contenuPage %}	<!-- CONTENU PAGE -->
 
 	<div class="row">
 
-		<!-- OFFRE STAGE -->
+		<!-- Offre stage -->
 		<div class="col-md-8 col-sm-12"> 
 
-			Formations
+			Formations <br>
 
-			Description
+			Description <br> <br>
 
 			lorem ipsum etc
 
 		</div>
 
-		<!-- INFO ENTREPRISE -->
+		<!-- Info entreprise -->
 		<div class="col-md-4 col-sm-12"> 
 
-			Entreprise nom
-			Adresse
+			Entreprise <br>
+			nom <br>
+			Adresse <br>
 
 		</div>
 	</div>
