Rajout de margins sur le template pour espacer

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,11 +11,11 @@
 
     </head>
     <body>
-        <div class="container-fluid">
+        <div class="container">
 
             <!-- BLOCK HEADER -->
             {% block header %}
-            <div class="row">
+            <div class="row my-5" >
                 <div class="col-md-12">
                     <h1 align=center>
                         ProStages
@@ -27,7 +27,7 @@
             <!-- BLOCK BOUTONS -->
             {% block bouton %}
             
-            <div class="row">
+            <div class="row my-3">
                 <div class="col-md-12">
                     <!-- Par defaut c'est le bouton de retour car 2/3 pages l'utilisent -->
                     {% block lienBouton %}
@@ -50,7 +50,7 @@
 
              <!-- BLOCK CONTENU -->
             {% block contenu %}
-            <div class="row">
+            <div class="row my-5">
                 <div class="col-md-12">
 
                     <!-- BLOCK TITRE PAGE -->
