--- a/templates/pro_stages/index.html.twig
+++ b/templates/pro_stages/index.html.twig
@@ -41,7 +41,7 @@ Filtrer
 	<tbody>
 		<tr>
 			{% for user in 1..7 %}
-		        <td>{{ user }}</td>
+		        <td> <a href="/stage1"> 1 </a></td>
 		    {% endfor %}
     	</tr>
 	</tbody>
