Rajout de liens dans le tableau qui mene aux stages

--- a/templates/pro_stages/afficherStage.html.twig
+++ b/templates/pro_stages/afficherStage.html.twig
@@ -18,7 +18,7 @@
 
 			Description <br> <br>
 
-			lorem ipsum etc
+			Lorem ipsum dolor sit amet, consectetur adipiscing elit. Etiam id maximus ipsum. Praesent eu orci et lorem aliquet auctor quis a mauris. Cras suscipit feugiat volutpat. Fusce ipsum lorem, volutpat vel nibh non, blandit convallis lorem. Suspendisse laoreet, mauris at laoreet dapibus, lorem nunc tristique nisl, quis suscipit quam libero sit amet lectus. Proin condimentum dapibus suscipit. Vivamus a nunc vitae mi accumsan posuere iaculis sed odio. Sed tincidunt viverra leo vitae ultricies. Quisque ut consectetur neque. Mauris vel tincidunt mauris, in pulvinar enim. Donec eu nisl vel enim maximus cursus. Vivamus imperdiet, eros ut varius ultrices, quam urna feugiat nulla, at varius nunc velit quis ex. Vivamus efficitur, elit vel consequat dignissim, quam leo convallis nisi, at convallis felis felis vitae orci. Sed posuere maximus turpis ac tempor. Suspendisse a risus ut leo feugiat fermentum ac ac ex.
 
 		</div>
 
