Mise en place page listeStages

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,8 +54,9 @@
                 <div class="col-md-12">
 
                     <!-- BLOCK TITRE PAGE -->
+                    <h2 style="margin-bottom:2rem">
                     {% block titrePage %} {% endblock %}
-
+                    </h2>
                     <!-- BLOCK CONTENU DE LA PAGE -->
                     {% block contenuPage %} {% endblock %}
 
