--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -11,7 +11,7 @@
 
     </head>
     <body>
-        <div class="container">
+        <div class="fluid-container" style="padding:30px">
 
             <!-- BLOCK HEADER -->
             {% block header %}
