--- a/templates/pro_stages/ajoutModifEntreprise.html.twig
+++ b/templates/pro_stages/ajoutModifEntreprise.html.twig
@@ -15,7 +15,7 @@
 
 {% block contenuPage %}
 
-{{ form_start(vueFormulaire) }}
+{{ form_start(vueFormulaire, { 'attr' : {'novalidate':'novalidate'}}) }}
 
 {{ form_row(vueFormulaire.nom,  {'attr':{'placeholder':"Nom de l'entreprise..."}}) }}
 {{ form_row(vueFormulaire.activite, {'attr':{'placeholder':"Son activité..."}}) }}
