Verifications niveau 1,2 et 3

--- a/templates/pro_stages/ajoutModifEntreprise.html.twig
+++ b/templates/pro_stages/ajoutModifEntreprise.html.twig
@@ -20,6 +20,7 @@
 {{ form_row(vueFormulaire.nom,  {'attr':{'placeholder':"Nom de l'entreprise..."}}) }}
 {{ form_row(vueFormulaire.activite, {'attr':{'placeholder':"Son activité..."}}) }}
 {{ form_row(vueFormulaire.adresse, {'attr':{'placeholder':"Son adresse..."}}) }}
+{{ form_row(vueFormulaire.siteWeb, {'attr':{'placeholder':"Son site web..."}}) }}
 
 <button type="submit" class="btn btn-primary">Enregistrer</button>
 {{ form_end(vueFormulaire) }}
