--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -40,6 +40,9 @@
                                 <a class="nav-link" href="{{ path('prostages_filtrer') }}">Filtrer</a>
                             </li>
                             <li class="nav-item">
+                                <a class="nav-link" href="{{ path('prostages_ajouterStage') }}">Ajouter un stage</a>
+                            </li>
+                            <li class="nav-item">
                                 <a class="nav-link" href="{{ path('prostages_ajouterEntreprise')}}">Ajouter une entreprise</a>
                             </li>
                             
