--- a/templates/security/login.html.twig
+++ b/templates/security/login.html.twig
@@ -14,7 +14,7 @@
         </div>
     {% endif %}
 
-    <h4 class="mb-3 font-weight-normal">Connectez vous pour accéder à cette page</h4>
+    <h4 class="mb-3 font-weight-normal">Connectez vous pour accéder à plus de contenu</h4>
     <label for="inputUsername">Pseudo</label>
     <input type="text" value="{{ last_username }}" name="username" id="inputUsername" class="form-control" required autofocus>
     <br>
