--- a/templates/formation/_form.html.twig
+++ b/templates/formation/_form.html.twig
@@ -1,4 +1,6 @@
 {{ form_start(form) }}
-    {{ form_widget(form) }}
-    <button class="btn">{{ button_label|default('Save') }}</button>
+	{{ form_row(form.Formation) }}
+    <br>
+   	<button class="btn btn-primary posD">{{ button_label|default('Créer') }}</button>
+
 {{ form_end(form) }}
