--- a/templates/formation/edit.html.twig
+++ b/templates/formation/edit.html.twig
@@ -1,13 +1,13 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Edit Formation{% endblock %}
+{% block titrePage %} Modifier une formation {% endblock %}
 
-{% block body %}
-    <h1>Edit Formation</h1>
+{% block contenuPage %}
 
-    {{ include('formation/_form.html.twig', {'button_label': 'Update'}) }}
-
-    <a href="{{ path('formation_index') }}">back to list</a>
-
+    {{ include('formation/_form.html.twig', {'button_label': 'Enregistrer'}) }}
+ 
     {{ include('formation/_delete_form.html.twig') }}
+
+    <a class="btn btn-light" href="{{ path('formation_index') }}"><i class="fas fa-arrow-left"></i> Retour</a>
+
 {% endblock %}
