--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -1,14 +1,12 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Formation index{% endblock %}
+{% block titrePage %}Formations <a href="{{ path('formation_new') }}" class="btn btn-info" style="float:right"><i class="far fa-plus-square"></i> Ajouter</a>{% endblock %}
 
-{% block body %}
-    <h1>Formation index</h1>
+{% block contenuPage %}
 
     <table class="table">
         <thead>
             <tr>
-                <th>Id</th>
                 <th>Formation</th>
                 <th>actions</th>
             </tr>
@@ -16,20 +14,18 @@
         <tbody>
         {% for formation in formations %}
             <tr>
-                <td>{{ formation.id }}</td>
                 <td>{{ formation.Formation }}</td>
                 <td>
-                    <a href="{{ path('formation_show', {'id': formation.id}) }}">show</a>
-                    <a href="{{ path('formation_edit', {'id': formation.id}) }}">edit</a>
+                    <a href="{{ path('formation_show', {'id': formation.id}) }}"><i class="fas fa-eye"></i></a> &nbsp;  
+                    <a href="{{ path('formation_edit', {'id': formation.id}) }}"><i class="fas fa-pen"></i></a>
                 </td>
             </tr>
         {% else %}
             <tr>
-                <td colspan="3">no records found</td>
+                <td colspan="3">Pas de formations créées</td>
             </tr>
         {% endfor %}
         </tbody>
     </table>
 
-    <a href="{{ path('formation_new') }}">Create new</a>
 {% endblock %}
