Partie 'formation' reservé aux admins

--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -54,6 +54,10 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('prostages_ajouterEntreprise')}}">Ajouter une entreprise</a>
                             </li>
+
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('formation_index')}}">Gérer les formations</a>
+                            </li>
                             {% endif %}
                         </ul>
                     
