--- a/templates/formation/index.html.twig
+++ b/templates/formation/index.html.twig
@@ -8,7 +8,7 @@
         <thead>
             <tr>
                 <th>Formation</th>
-                <th>actions</th>
+                <th>Actions</th>
             </tr>
         </thead>
         <tbody>
