Rajout d'un element 'panel admin' dans le menu + ajouts design

--- a/templates/pro_stages/filtrer.html.twig
+++ b/templates/pro_stages/filtrer.html.twig
@@ -36,7 +36,7 @@
 
 		        		&emsp;  <!-- Grand espace -->
 
-		        		<a href="{{ path('prostages_modifierEntreprise', {'id' : entreprise.id}) }}" style="text-decoration:none;"> &#x1F589 </a> 
+		        		<a href="{{ path('prostages_modifierEntreprise', {'id' : entreprise.id}) }}" style="text-decoration:none;"> <i class="fas fa-pencil-alt"></i> </a> 
 
 		  
 		        	</li>
