--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -58,6 +58,9 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="{{ path('formation_index')}}">Gérer les formations</a>
                             </li>
+                            <li class="nav-item">
+                                <a class="nav-link" href="{{ path('easyadmin')}}"><i class="fas fa-user-cog"></i> Panel admin</a>
+                            </li>
                             {% endif %}
                         </ul>
                     
